--- a/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CatalogDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
