--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CacheSettings": {
+    "ConnectionString": "localhost:6380"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
